--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,3 +13,12 @@
 .actions-column button {
     margin-right: 5px;
 }
+
+/* Form validation color */
+.is-invalid {
+    border-color: #dc3545; /* Bootstrap red */
+}
+
+.is-invalid:focus {
+    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25); /* red shadow  */
+}
