--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37,3 +37,16 @@
     border: 2px solid red;
 }
 
+.card.h-100 {
+    height: 100%;
+}
+
+.card-body.d-flex.flex-column {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+}
